--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Consultorio dental ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
   <meta name="keywords"  content="CONTACTO, ODONTOLOGIA, REDES SOCIALES, FORMULARIOS, CONSULTORIO DENTAL, ROSARIO, SP">
 	<title>Contacto</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images\muelaicono.jpg">
+	<link rel="shortcut icon" type="image/x-icon" href="images/Iconos/muelaicono.jpg">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -47,31 +47,18 @@
 
 <div class="jumbotron jumbotron-fluid"> <!-- Comienzo seccion-->
   <div class="container text-center">
-    <h1 class="display-20">Contacto</h1>
+    <h1 class="display-20"><strong>Contacto</strong></h1>
   </div>
 </div> <!-- Fin seccion-->
 
-<h2 class="CentEsp__textoCentro CentEsp__espaciado">Para turnos o consultas, envianos un mensaje a nuestras redes:</h2>
-<div>
-	<ul class="padre-flex"> <!-- Comienzo parte de contacto: wsp, telefono, facebook, instagram -->
-		<li><img class="imgPos__imgPos3" src="images/whatsapp.png" width="50px" height="50px" alt="WhatsApp"></li> 
-		<li><img class="imgPos__imgPos3" src="images/phone-call.png" width="50px" height="50px" alt="Telefono"></li>
-		<li><img class="imgPos__imgPos3" src="images/facebook.png" width="50px" height="50px" alt="Facebook"></li>
-		<li><img class="imgPos__imgPos3" src="images/instagram.png" width="50px" height="50px" alt="Instagram"></li>
-	</ul> 
-</div> <!-- Fin parte de contacto -->
-
-<hr class="CentEsp__espaciado">
-
-<h2 class="CentEsp__textoCentro CentEsp__espaciado"> Para consultas puntuales, completar el formulario </h2>
+<h2 class="CentEsp__textoCentro CentEsp__espaciado"> Para consultas puntuales, completar el formulario: </h2>
 
 <section class="container-fluid"> <!-- Comienzo formulario -->
-    <h2 class="text-center"><b>Contacto</b></h2>
-    	<div class="row mt-1 justify-content-center">
-    		<div class="col-xl-6 col-lg-6 col-xs-12">
-            	<form method="post" action="#">
-              		<div class="form-group text-center">
-                	<label for="nc" >Nombre completo <span class="text-danger"> *</span></label>
+      <div class="row mt-1 justify-content-center">
+        <div class="col-xl-6 col-lg-6 col-xs-12">
+              <form method="post" action="#">
+                  <div class="form-group text-center">
+                  <label for="nc" >Nombre completo <span class="text-danger"> *</span></label>
                 <input id="nc" type="text" class="form-control" required placeholder="Nombre completo"/>
             </div>
             <div class="form-group text-center">
@@ -79,27 +66,39 @@
                 <input
                 id="mail" type="email" class="form-control" placeholder="ejemplo@correo.com.ar"/>
             </div>
-		<div class="text-center">
-				<label class="mb-2" for="tipopaciente">Tipo de paciente</label>
-				<select class="form-control mb-2">
-			  		<option value="os">Obra social</option>
-			  		<option value="part">Particular</option>
-			  		<option value="otro">Visitador medico</option> 
-				</select>
+    <div class="text-center">
+        <label class="mb-2" for="tipopaciente">Tipo de paciente</label>
+        <select class="form-control mb-2">
+            <option value="os">Obra social</option>
+            <option value="part">Particular</option>
+            <option value="otro">Visitador medico</option> 
+        </select>
         </div>  
         <div class="checkbox text-center mt-3">
-    			<label for="comentario">Comentario <span class="text-danger">*</span></label>
+          <label for="comentario">Comentario <span class="text-danger">*</span></label>
                 <textarea id="comentario" class="form-control" placeholder="Comentario"
                 ></textarea>
-    		<div class="form-group mt-3">
+        <div class="form-group mt-3">
                 <label> Persona de riesgo (Tilde opcion para confirmar)
-     			<input type="checkbox">
-   				</label>
+          <input type="checkbox">
+          </label>
             </div>
-              	<button class="btn btn-success btn-block mb-5">Enviar</button>
-         	</div>
-    	</div>
+                <button class="btn btn-success btn-block mb-5">Enviar</button>
+          </div>
+      </div>
 </section> <!-- Fin formulario -->
+
+<hr class="CentEsp__espaciado">
+
+<h2 class="CentEsp__textoCentro CentEsp__espaciado">Para turnos o consultas, envianos un mensaje a nuestras redes:</h2>
+<div>
+	<ul class="padre-flex"> <!-- Comienzo parte de contacto: wsp, telefono, facebook, instagram -->
+		<li><img class="imgPos__imgPos3" src="images/Redes/whatsapp.png" width="50px" height="50px" alt="WhatsApp"></li> 
+		<li><img class="imgPos__imgPos3" src="images/Redes/phone-call.png" width="50px" height="50px" alt="Telefono"></li>
+		<li><img class="imgPos__imgPos3" src="images/Redes/facebook.png" width="50px" height="50px" alt="Facebook"></li>
+		<li><img class="imgPos__imgPos3" src="images/Redes/instagram.png" width="50px" height="50px" alt="Instagram"></li>
+	</ul> 
+</div> <!-- Fin parte de contacto -->
 
 <footer class="container-fluid mt-5 footer"> <!-- Comienzo footer -->
     <div class="row justify-content-center align-items-center">
@@ -114,7 +113,7 @@
       </div>
       <div class="col-lg-3 col-md-3 col-12">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="160%" height="200px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="400px" height="150px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
         </iframe>
       </div>
     </div>
