--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Consultorio dental ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
   <meta name="keywords"  content="INICIO, PREPAGAS, CONSULTAS, ODONTOLOGIA, CONSULTORIO DENTAL, ROSARIO, SP">
 	<title>Consultorio Odontologico SP</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images\muelaicono.jpg"/>
+	<link rel="shortcut icon" type="image/x-icon" href="images/Iconos/muelaicono.jpg"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -23,6 +23,10 @@
   <link rel="stylesheet" href="css/pruebacss.css">
 
 </head> <!-- Fin HEAD -->
+
+<style>
+  
+</style>
 
 <body class="cuerpo__fondoCompleto cuerpo__fuente"> <!-- Comienzo body -->
 
@@ -52,7 +56,43 @@
   </div>
 </nav> <!-- Fin barra de navegacion -->
 
-<img src="images/12.jpg" alt="Consultorio" width="100%" height="120%" alt="Inicio del consultorio">
+<div class="contenedor"> <!-- Comienzo descripcion imagen de inicio -->
+  <img src="images/Consultorio/12.jpg" alt="Consultorio" width="100%" height="100%" alt="Inicio del consultorio">
+<h1 class="centrado2"><span class="badge badge-info">Prestaciones en Consultorio Odontologico SP</span></h1>
+<ul class="list-group list-group-flush centrado1">
+  <li class="list-group-item">Odontología General</li>
+  <li class="list-group-item">Odontopediatria</li>
+  <li class="list-group-item">Periodoncia</li>
+  <li class="list-group-item">Implantología</li>
+  <li class="list-group-item">Endodoncia</li>
+  <li class="list-group-item">Ortodoncia</li>
+</ul>
+</div>
+
+<style>
+.contenedor{
+    position: relative;
+    display: inline-block;
+    text-align: center;
+    height:100%;
+    width:100%;
+}
+ 
+.centrado1{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centrado2{
+    position:absolute;
+    top: 25%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+</style> <!-- Fin descripcion imagen de inicio -->
 
 <hr>
 
@@ -65,19 +105,25 @@ color = (color == "#ffffff")? "black" : "#ffffff";
 blink.style.color = color;
 blink.style.fontSize='36px';}
 </script>
-<div id="blink" class="text-center">Prepagas</div>
+<div id="blink" class="text-center"><strong>Prepagas</strong></div>
 <div id="blink" onclick="parent.location='http://norfipc.com'"></div>
 
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel"> <!-- Comienzo carrusel -->
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="images/pami.png" alt="Pami" width="100px" height="200px">
+    <div class="carousel-item active" align="center">
+      <img class="d-block w-50 ima" src="images/OS/pami.png" alt="Pami" width="100px" height="200px">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/medife.jpg" alt="Medife" width="50px" height="200px">
+    <div class="carousel-item" align="center">
+      <img class="d-block w-50 ima" src="images/OS/medife.jpg" alt="Medife" width="50px" height="200px">
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="images/unr.jpg" alt="UNR" width="100px" height="200px">
+    <div class="carousel-item" align="center">
+      <img class="d-block w-50 ima" src="images/OS/sancor.png" alt="UNR" width="100px" height="200px">
+    </div>
+    <div class="carousel-item" align="center">
+      <img class="d-block w-50 ima" src="images/OS/osde.png" alt="UNR" width="100px" height="200px">
+    </div>
+    <div class="carousel-item" align="center">
+      <img class="d-block w-50 ima" src="images/OS/galeno.jpg" alt="UNR" width="20px" height="200px">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -107,7 +153,7 @@ blink.style.fontSize='36px';}
       </div>
       <div class="col-lg-3 col-md-3 col-12">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="160%" height="200px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="400px" height="150px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
         </iframe>
       </div>
     </div>
