--- a/ubicacion.html
+++ b/ubicacion.html
@@ -8,7 +8,7 @@
   <meta name="description" content="Consultorio dental ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
   <meta name="keywords"  content="UBICACION, CALLES, DIRECCION, ZONA, ODONTOLOGIA, CONSULTORIO DENTAL, ROSARIO, SP">
 	<title>Ubicacion</title>
-	<link rel="shortcut icon" type="image/x-icon" href="images/muelaicono.jpg"/>
+	<link rel="shortcut icon" type="image/x-icon" href="images/Iconos/muelaicono.jpg"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -48,7 +48,7 @@
 
 <div class="jumbotron jumbotron-fluid"> <!-- Comienzo seccion -->
   <div class="container text-center">
-    <h1 class="display-20">Ubicacion</h1>
+    <h1 class="display-20"><strong>Ubicacion</strong></h1>
   </div>
 </div> <!-- Fin seccion -->
 
@@ -78,7 +78,7 @@
       </div>
       <div class="col-lg-3 col-md-3 col-12">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="160%" height="200px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="400px" height="150px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
         </iframe>
       </div>
     </div>
