Repositorio casi por terminar

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Consultorio dental ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
+  <meta name="description" content="Consultorio odontológico ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
   <meta name="keywords"  content="INICIO, PREPAGAS, CONSULTAS, ODONTOLOGIA, CONSULTORIO DENTAL, ROSARIO, SP">
-	<title>Consultorio Odontologico SP</title>
+	<title>Consultorio Odontológico SP</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/Iconos/muelaicono.jpg"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
 <body class="cuerpo__fondoCompleto cuerpo__fuente"> <!-- Comienzo body -->
 
 <nav class="header navbar navbar-expand-lg navbar-light bg-light"> <!-- Comienzo barra de navegacion -->
-  <a class="navbar-brand" href="#">Consultorio Odontologico SP</a>
+  <a class="navbar-brand" href="index.html">Consultorio Odontológico SP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -47,7 +47,7 @@
         <a class="nav-link" href="establecimiento.html">Establecimiento</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
+        <a class="nav-link" href="ubicacion.html">Ubicación</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -58,8 +58,9 @@
 
 <div class="contenedor"> <!-- Comienzo descripcion imagen de inicio -->
   <img src="images/Consultorio/12.jpg" alt="Consultorio" width="100%" height="100%" alt="Inicio del consultorio">
-<h1 class="centrado2"><span class="badge badge-info">Prestaciones en Consultorio Odontologico SP</span></h1>
-<ul class="list-group list-group-flush centrado1">
+<h1 class="centrado2 badge-info">Consultorio Odontológico SP</h1>
+<h2 class="centrado1 badge-primary">Prestaciones</h2>
+<ul class="list-group list-group-flush centrado3">
   <li class="list-group-item">Odontología General</li>
   <li class="list-group-item">Odontopediatria</li>
   <li class="list-group-item">Periodoncia</li>
@@ -74,20 +75,27 @@
     position: relative;
     display: inline-block;
     text-align: center;
-    height:100%;
+    height:150%;
     width:100%;
 }
  
 .centrado1{
     position: absolute;
-    top: 50%;
+    top: 28%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
 .centrado2{
     position:absolute;
-    top: 25%;
+    top: 10%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.centrado3{
+    position:absolute;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
@@ -105,10 +113,10 @@ color = (color == "#ffffff")? "black" : "#ffffff";
 blink.style.color = color;
 blink.style.fontSize='36px';}
 </script>
-<div id="blink" class="text-center"><strong>Prepagas</strong></div>
+<div id="blink" class="text-center mb-2"><strong>Prepagas</strong></div>
 <div id="blink" onclick="parent.location='http://norfipc.com'"></div>
 
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel"> <!-- Comienzo carrusel -->
+<div id="carouselExampleControls" class="carousel slide mb-5" data-ride="carousel"> <!-- Comienzo carrusel -->
   <div class="carousel-inner">
     <div class="carousel-item active" align="center">
       <img class="d-block w-50 ima" src="images/OS/pami.png" alt="Pami" width="100px" height="200px">
@@ -117,13 +125,13 @@ blink.style.fontSize='36px';}
       <img class="d-block w-50 ima" src="images/OS/medife.jpg" alt="Medife" width="50px" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/sancor.png" alt="UNR" width="100px" height="200px">
+      <img class="d-block w-50 ima" src="images/OS/sancor.png" alt="Sancor" width="100px" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/osde.png" alt="UNR" width="100px" height="200px">
+      <img class="d-block w-50 ima" src="images/OS/osde.png" alt="OSDE" width="100px" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/galeno.jpg" alt="UNR" width="20px" height="200px">
+      <img class="d-block w-50 ima" src="images/OS/galeno.jpg" alt="Galeno" width="20px" height="200px">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -136,28 +144,68 @@ blink.style.fontSize='36px';}
   </a>
 </div> <!-- Fin carrusel -->
 
-<hr>
-
-<br>
-
-<footer class="container-fluid mt-5 footer"> <!-- Comienzo pie de pagina -->
-    <div class="row justify-content-center align-items-center">
-      <div class="col-lg-3 col-md-3 col-12">
-        <address>
-          <p>Regimiento 11 220</p>
-        </address>
-          <p>Tel. 341-4654362</p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-12 text-center">
-          <p>Copyright © 1990 <span> Consultorio Odontologico SP </span></p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-12">
+<footer class="bg-dark text-white text-center text-lg-start"> <!-- Comienzo footer -->
+  <div class="container p-4">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">NUESTRO CONSULTORIO</h5>
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="400px" height="150px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="550px" height="200px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
         </iframe>
       </div>
+
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Pagina</h5>
+
+        <ul class="list-unstyled mb-0">
+          <li>
+            <a href="index.html" class="text-white">Inicio</a>
+          </li>
+          <li>
+            <a href="historia.html" class="text-white">Historia</a>
+          </li>
+          <li>
+            <a href="establecimiento.html" class="text-white">Establecimiento</a>
+          </li>
+          <li>
+            <a href="ubicacion.html" class="text-white">Ubicación</a>
+          </li>
+          <li>
+            <a href="contacto.html" class="text-white">Contacto</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase mb-2">Redes</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="+543413413413" class="text-white">Teléfono</a>
+          </li>
+          <li>
+            <a href="https://chat.whatsapp.com/FRlwIQmiHLwIXE6tQxqtFk" class="text-white">WhatsApp</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" class="text-white">Facebook</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" class="text-white">Instagram</a>
+          </li>
+          <li>
+            <a href="contacto.html"class="text-white">Formulario</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</footer> <!-- Fin pie de pagina -->
+  </div>
+
+
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 1990 Copyright: 
+    <a class="text-white" href="https://www.consultorioodontologicosp.com.ar">Consultorio Odontológico SP</a>
+  </div>
+</footer> <!-- Fin footer -->
 
 </body> <!-- Fin body -->
 
