--- a/contacto.html
+++ b/contacto.html
@@ -4,8 +4,8 @@
 <head> <!-- Comienzo HEAD -->
 
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Consultorio dental ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
-  <meta name="keywords"  content="CONTACTO, ODONTOLOGIA, REDES SOCIALES, FORMULARIOS, CONSULTORIO DENTAL, ROSARIO, SP">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"><meta name="description" content="Consultorio odontológico ubicado en la zona sur de Rosario, mas de 25 años atendiendo y solucionando problemas a los pacientes. El establecimiento cuenta con espacios comodos y amplios. Contando con protocolos contra COVID-19">
+  <meta name="keywords"  content="CONTACTO, ODONTOLOGÍA, REDES SOCIALES, FORMULARIOS, CONSULTORIO DENTAL, ROSARIO, SP">
 	<title>Contacto</title>
 	<link rel="shortcut icon" type="image/x-icon" href="images/Iconos/muelaicono.jpg">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -20,7 +20,7 @@
 <body class="cuerpo__fondoCompleto cuerpo__fuente"> <!-- Comienzo body -->
 
 <nav class="header navbar navbar-expand-lg navbar-light bg-light"> <!-- Comienzo barra de navegacion -->
-  <a class="navbar-brand" href="#">Consultorio Odontologico SP</a>
+  <a class="navbar-brand" href="index.html">Consultorio Odontológico SP</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,7 +36,7 @@
         <a class="nav-link" href="establecimiento.html">Establecimiento</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
+        <a class="nav-link" href="ubicacion.html">Ubicación</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="contacto.html">Contacto</a>
@@ -58,11 +58,11 @@
         <div class="col-xl-6 col-lg-6 col-xs-12">
               <form method="post" action="#">
                   <div class="form-group text-center">
-                  <label for="nc" >Nombre completo <span class="text-danger"> *</span></label>
-                <input id="nc" type="text" class="form-control" required placeholder="Nombre completo"/>
+                  <label for="nc" >Nombre completo<span class="text-danger">*</span></label>
+                <input id="nc" type="text" class="form-control" required placeholder="Nombre completo" autofocus/>
             </div>
             <div class="form-group text-center">
-                <label for="mail">Correo electronico <span class="text-danger">*</span></label>
+                <label for="mail">Correo electrónico<span class="text-danger">*</span></label>
                 <input
                 id="mail" type="email" class="form-control" placeholder="ejemplo@correo.com.ar"/>
             </div>
@@ -75,7 +75,7 @@
         </select>
         </div>  
         <div class="checkbox text-center mt-3">
-          <label for="comentario">Comentario <span class="text-danger">*</span></label>
+          <label for="comentario">Comentario<span class="text-danger">*</span></label>
                 <textarea id="comentario" class="form-control" placeholder="Comentario"
                 ></textarea>
         <div class="form-group mt-3">
@@ -93,31 +93,73 @@
 <h2 class="CentEsp__textoCentro CentEsp__espaciado">Para turnos o consultas, envianos un mensaje a nuestras redes:</h2>
 <div>
 	<ul class="padre-flex"> <!-- Comienzo parte de contacto: wsp, telefono, facebook, instagram -->
-		<li><img class="imgPos__imgPos3" src="images/Redes/whatsapp.png" width="50px" height="50px" alt="WhatsApp"></li> 
-		<li><img class="imgPos__imgPos3" src="images/Redes/phone-call.png" width="50px" height="50px" alt="Telefono"></li>
-		<li><img class="imgPos__imgPos3" src="images/Redes/facebook.png" width="50px" height="50px" alt="Facebook"></li>
-		<li><img class="imgPos__imgPos3" src="images/Redes/instagram.png" width="50px" height="50px" alt="Instagram"></li>
+		<li><img class="imgPos__imgPos3" src="images/Redes/phone-call.png" href="#" width="50px" height="50px" alt="Telefono">
+    </li><li><img class="imgPos__imgPos3" src="images/Redes/whatsapp.png" href="#" width="50px" height="50px" alt="WhatsApp"></li> 
+		<li><img class="imgPos__imgPos3" src="images/Redes/facebook.png" href="#" width="50px" height="50px" alt="Facebook"></li>
+		<li><img class="imgPos__imgPos3" src="images/Redes/instagram.png" href="#" width="50px" height="50px" alt="Instagram"></li>
 	</ul> 
 </div> <!-- Fin parte de contacto -->
 
-<footer class="container-fluid mt-5 footer"> <!-- Comienzo footer -->
-    <div class="row justify-content-center align-items-center">
-      <div class="col-lg-3 col-md-3 col-12">
-        <address>
-          <p>Regimiento 11 220</p>
-        </address>
-          <p>Tel. 341-4654362</p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-12 text-center">
-          <p>Copyright © 1990 <span> Consultorio Odontologico SP </span></p>
-      </div>
-      <div class="col-lg-3 col-md-3 col-12">
+<footer class="bg-dark text-white text-center text-lg-start mt-5"> <!-- Comienzo footer -->
+  <div class="container p-4">
+    <div class="row">
+      <div class="col-lg-6 col-md-12 mb-4 mb-md-0">
+        <h5 class="text-uppercase">NUESTRO CONSULTORIO</h5>
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="400px" height="150px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="550px" height="200px" frameborder="0" style="border: 0" allowfullscreen aria-hidden="false" tabindex="0">
         </iframe>
       </div>
+
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase">Pagina</h5>
+
+        <ul class="list-unstyled mb-0">
+          <li>
+            <a href="index.html" class="text-white">Inicio</a>
+          </li>
+          <li>
+            <a href="historia.html" class="text-white">Historia</a>
+          </li>
+          <li>
+            <a href="establecimiento.html" class="text-white">Establecimiento</a>
+          </li>
+          <li>
+            <a href="ubicacion.html" class="text-white">Ubicación</a>
+          </li>
+          <li>
+            <a href="contacto.html" class="text-white">Contacto</a>
+          </li>
+        </ul>
+      </div>
+
+      <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+        <h5 class="text-uppercase mb-2">Redes</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="+543413413413" class="text-white">Teléfono</a>
+          </li>
+          <li>
+            <a href="https://chat.whatsapp.com/FRlwIQmiHLwIXE6tQxqtFk" class="text-white">WhatsApp</a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com" class="text-white">Facebook</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com" class="text-white">Instagram</a>
+          </li>
+          <li>
+            <a href="contacto.html"class="text-white">Formulario</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</footer> <!--Fin footer -->
+  </div>
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 1990 Copyright: 
+    <a class="text-white" href="https://www.consultorioodontologicosp.com.ar">Consultorio Odontológico SP</a>
+  </div>
+</footer> <!-- Fin footer -->
 
 </body> <!-- Fin body -->
 
