Modificaciones del proyecto

--- a/establecimiento.html
+++ b/establecimiento.html
@@ -55,14 +55,15 @@
 <section> <!-- Fotos descriptivas -->
 
 <p class="CentEsp__textoCentro CentEsp__espaciado CentEsp__espaciadoPared"> Contamos con tecnologías y equipos de ultima generacion. Nos adaptamos a las ultimas tendencias y trabajos del mercado actual. Brindamos seguridad y profesionalidad a la hora de realizar nuestras prestaciones. </p>
-  <ul class="padre-flex2">
-    <li class="disp"><img class="imgPos__imgPos2" src="images/Consultorio/12.jpg" alt="Imagen del establecimiento"></li> 
-    <li class="disp"><img class="imgPos__imgPos2" src="images/Consultorio/13.jpg" alt="Imagen del establecimiento"></li>
-    <li class="disp"><img class="imgPos__imgPos2" src="images/Consultorio/14.jpg" alt="Imagen del establecimiento"></li>
-    <li class="disp"><img class="imgPos__imgPos2" src="images/Consultorio/15.jpg" alt="Imagen del establecimiento"></li>
-    <li class="disp"><img class="imgPos__imgPos2" src="images/Consultorio/16.jpg" alt="Imagen del establecimiento"></li>
-    <li class="disp"><img class="imgPos__imgPos2" src="images/Consultorio/17.jpg" alt="Imagen del establecimiento"></li> 
+  <ul align="center" class="imgmobile">
+    <li><img class="imgPos__imgPos2" src="images/Consultorio/12.jpg" width="603px" height="402px" alt="Imagen del establecimiento"></li> 
+    <li><img class="imgPos__imgPos2" src="images/Consultorio/13.jpg" width="603px" height="auto" alt="Imagen del establecimiento"></li>
+    <li><img class="imgPos__imgPos2" src="images/Consultorio/14.jpg" width="603px" height="auto" alt="Imagen del establecimiento"></li>
+    <li><img class="imgPos__imgPos2" src="images/Consultorio/15.jpg" width="603px" height="402px" alt="Imagen del establecimiento"></li>
+    <li><img class="imgPos__imgPos2" src="images/Consultorio/16.jpg" width="603px" height="auto" alt="Imagen del establecimiento"></li>
+    <li><img class="imgPos__imgPos2" src="images/Consultorio/17.jpg" width="603px" height="402px" alt="Imagen del establecimiento"></li> 
   </ul> 
+
 
 </section> <!-- Fin fotos descriptivas -->
   
