--- a/historia.html
+++ b/historia.html
@@ -65,19 +65,18 @@
 Consultorio Odontológico ubicado en la zona sur de Rosario.
 Nuestros 25 años en el rubro dental nos certifican la gratitud y responsabilidad en nuestros trabajos para los pacientes.
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas distinctio consectetur quisquam numquam doloribus ullam alias consequatur! Voluptatem, obcaecati sint minus quibusdam voluptates est facilis ex, incidunt adipisci optio perferendis.
-Laudantium, nisi ipsa harum rem facilis repellendus odit maiores iusto exercitationem, praesentium aliquam aspernatur numquam dolor, quo. Ipsa enim cumque voluptatibus a et minima maiores impedit distinctio ea mollitia? Perferendis! Lorem, ipsum dolor, sit amet consectetur adipisicing elit. Tempore cumque eius, atque officia, reprehenderit hic veritatis iusto expedita laboriosam, commodi, provident perspiciatis fuga? Maiores exercitationem ab deserunt distinctio placeat reprehenderit.
-Illo aspernatur porro, nostrum magni, incidunt rerum eaque minus ab ratione impedit perspiciatis optio cum sed facilis id non, praesentium odit provident? Cum eum, eligendi iusto dolorem, sit explicabo vero?
+Laudantium, nisi ipsa harum rem facilis repellendus odit maiores iusto exercitationem, praesentium aliquam aspernatur numquam dolor, quo. Ipsa enim cumque voluptatibus a et minima maiores impedit distinctio ea mollitia? Perferendis!
 
         </p>
 
     </contenido2>
 
 <contenido3 class="mb-5">
-        <ul class="mb-5">
-    <li class="disp"><img class="imgPos__imgPos1" src="images/ConsultorioOld/old4.jpg" alt="Consultorio antiguo"></li> 
-    <li class="disp"><img class="imgPos__imgPos1" src="images/ConsultorioOld/old5.jpg" alt="Consultorio antiguo"></li>
-    <li class="disp"><img class="imgPos__imgPos1" src="images/ConsultorioOld/old6.jpg" alt="Consultorio antiguo"></li>
-    <li class="disp"><img class="imgPos__imgPos1" src="images/ConsultorioOld/old7.jpg" alt="Consultorio antiguo"></li>
+        <ul class="mb-5" align="center">
+    <li><img class="imgPos__imgPos1" src="images/ConsultorioOld/old4.jpg" width="603px" height="402px" alt="Consultorio antiguo"></li> 
+    <li><img class="imgPos__imgPos1" src="images/ConsultorioOld/old5.jpg" width="603px" height="402px" alt="Consultorio antiguo"></li>
+    <li><img class="imgPos__imgPos1" src="images/ConsultorioOld/old6.jpg" width="603px" height="402px" alt="Consultorio antiguo"></li>
+    <li><img class="imgPos__imgPos1" src="images/ConsultorioOld/old7.jpg" width="603px" height="402px" alt="Consultorio antiguo"></li>
         </ul>
 </contenido3>
 
