--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@
   <li class="list-group-item">Periodoncia</li>
   <li class="list-group-item">Implantología</li>
   <li class="list-group-item">Endodoncia</li>
-  <li class="list-group-item">Ortodoncia</li>
 </ul>
 </div>
 
@@ -113,25 +112,25 @@ color = (color == "#ffffff")? "black" : "#ffffff";
 blink.style.color = color;
 blink.style.fontSize='36px';}
 </script>
-<div id="blink" class="text-center mb-2"><strong>Prepagas</strong></div>
+<div id="blink" class="text-center mt-5 mb-3 badge-pill badge-light p-1"><strong>Prepagas</strong></div>
 <div id="blink" onclick="parent.location='http://norfipc.com'"></div>
 
-<div id="carouselExampleControls" class="carousel slide mb-5" data-ride="carousel"> <!-- Comienzo carrusel -->
+<div id="carouselExampleControls" class="carousel slide mb-5 mt-5" data-ride="carousel"> <!-- Comienzo carrusel -->
   <div class="carousel-inner">
     <div class="carousel-item active" align="center">
-      <img class="d-block w-50 ima" src="images/OS/pami.png" alt="Pami" width="100px" height="200px">
+      <img class="d-block w-50 adapt" src="images/OS/pami.png" alt="Pami" width="100%" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/medife.jpg" alt="Medife" width="50px" height="200px">
+      <img class="d-block w-50 adapt" src="images/OS/medife.jpg" alt="Medife" width="100%" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/sancor.png" alt="Sancor" width="100px" height="200px">
+      <img class="d-block w-50 adapt" src="images/OS/sancor.png" alt="Sancor" width="100%" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/osde.png" alt="OSDE" width="100px" height="200px">
+      <img class="d-block w-50 adapt" src="images/OS/osde.png" alt="OSDE" width="100%" height="200px">
     </div>
     <div class="carousel-item" align="center">
-      <img class="d-block w-50 ima" src="images/OS/galeno.jpg" alt="Galeno" width="20px" height="200px">
+      <img class="d-block w-50 adapt" src="images/OS/galeno.jpg" alt="Galeno" width="100%" height="200px">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
