--- a/ubicacion.html
+++ b/ubicacion.html
@@ -59,7 +59,7 @@
 	<address class="CentEsp__textoCentro">
 		Regimiento 11 220. Rosario, Santa Fe, Argentina
 
-<iframe class="espaciado" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="1000" height="500" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+<iframe class="espaciado" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d209.1378256735252!2d-60.6346812572324!3d-32.99836483937088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7abd15146981b%3A0x431f962b9a798444!2sRegimiento%2011%20220%2C%20S2011%20AKH%2C%20Santa%20Fe!5e0!3m2!1ses-419!2sar!4v1606681998216!5m2!1ses-419!2sar" width="1200px" height="400px" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
 
 	</address>
 
@@ -120,6 +120,7 @@
       </div>
     </div>
   </div>
+
 
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
     © 1990 Copyright: 
